<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toStartOf="@id/fl_companyLogo">

        <TextView
            android:id="@+id/tv_jobTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/job_title"
            app:layout_constraintBottom_toTopOf="@+id/tv_companyName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_companyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/company_name"
            app:layout_constraintBottom_toTopOf="@+id/tv_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_jobTitle" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/location"
            app:layout_constraintBottom_toTopOf="@+id/tv_postDate"
            app:layout_constraintTop_toBottomOf="@+id/tv_companyName" />

        <TextView
            android:id="@+id/tv_postDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postdate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_location" />
    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:id="@+id/fl_companyLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/iv_companyLogo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_image" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>
</RelativeLayout>